--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-Slate
+theme: jekyll-theme-slate
+title: Vishal Singh Heer
+description: A professional online showcase of my skills and experience.
+
