--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-slate
+show_title: false
 title: Vishal Singh Heer
 description: A professional online showcase of my skills and experience.
 
