--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-Tactile
+theme: jekyll-theme-Merlot
 title: Vishal Singh Heer
 description: A professional online showcase of my skills and experience.
 
