--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-Dinky
-title: Resume
+title: Vishal Singh Heer
 description: A professional online showcase of my skills and experience.
 
